add batch exporter example
Signed-off-by: Andrew Jandacek <andrew.jandacek@broadcom.com>